# sfe

./: .gitignore  LICENSE  README.md  WHATS-NEXT.md  names.txt  pyproject.toml  setup.py  sfe  sfe_main.py  to-dos.md
.claude/: CLAUDE.md  memory.md  session-state.json  settings.local.json  whats-next.md
.data/: info.txt
.data/categories/: Accessibility.txt  Arrows.txt  Automotive.txt  Camera & Photos.txt  Commerce.txt  Communication.txt  Connectivity.txt  Devices.txt  Draw.txt  Editing.txt  Fitness.txt  Gaming.txt  Health.txt  Home.txt  Human.txt  Indices.txt  Keyboard.txt  Maps.txt  Math.txt  Media.txt  Multicolor.txt  Nature.txt  Objects & Tools.txt  Privacy & Security.txt  Shapes.txt  Text Formatting.txt  Time.txt  Transportation.txt  Variable.txt  Weather.txt
.github/workflows/: update-badge.yml
homebrew/: sfe.rb
openspec/changes/archive/2026-02-12-fix-duplicate-badge-stats/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-12-fix-duplicate-badge-stats/specs/update-readme-badge/: spec.md
openspec/specs/update-readme-badge/: spec.md
